# cis6930sp24-assignment0

./: README.md
229043060/: Pipfile  README.md  metadata.yml  requirements.txt  setup.cfg  setup.py
229043060/assignment0/: __init__.py  incident_data.db  main.py  requirements.txt
229043060/assignment0.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
229043060/resources/: normanpd.db
229043060/tests/: test_assignment0.py
