[metadata]
name = assignment0
version = 1.0
author = "Suchithra Macha"
author_email = "smacha@ufl.edu"
description =  extracting data from an online source and reformatting the data.
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    certifi==2024.2.2
    charset-normalizer==3.3.2
    idna==3.6
    pypdf==4.0.1
    requests==2.31.0
    urllib3==2.2.0

[options.entry_points]
console_scripts =
    assignment0 = assignment0.main:main

[tool:pytest]
norecursedirs = .*, CVS, _darcs, {arch}, *.egg, venv

[aliases]
test=pytest
